2006-03-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Pre-calculate some of %to_be_rebuilt, to fix the case where:
		- a parent doesn't need a build, but a splitoff requires it, AND
		- the splitoff is considered by PACKAGELOOP after the parent

2006-03-24  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Hardcode path to unversioned perl.

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: tar doesn't need --exclude since fink_packages is
	now a complete explicit file list

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: switch fink_packagefiles to using
	MakeMaker (MANIFEST* in fink source root)

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: Intel OS X now up to darwin8.5.3

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Use new Buildlock::can_remove method

2006-03-23  Daniel Macks  <dmacks@netspace.org>

	* Finally/Buildlock.pm: Hardcode lock-package PreRm scripts to use
	the same perl interp as fink itself uses

2006-03-23  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Remove implicit depends on essential, if there are any
	problems cirdan will fix them :-)

2006-03-23  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Finally.pm: Use a pretty OO interface.
	* Finally/BuildConflicts.pm: New module for BuildConflicts removal and
	restoration.
	* Finally/Buildlock.pm: New module for buildlock setting and clearing.
	* Engine.pm: Remove add_finalizer interface, move BuildConflicts removal
	to Finally/BuildConflicts.pm 
	* PkgVersion.pm: Add method is_bootstrapping, move buildlock stuff to
	Finally/Buildlock.pm. New scapackages stuff in END.

2006-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* CLI.pm: Add logging to &capture, fix open-modes problem. 

2006-03-22  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: fix cctools-single-module to use a check against the